Almost done with mode 5

--- a/include/README
+++ b/include/README
@@ -38,7 +38,7 @@ Read more about using header files in official GCC documentation:
 
 https://gcc.gnu.org/onlinedocs/cpp/Header-Files.html
 
-For Telecommands:
+For Telecommands: cadse/2023/broadcast
 
 Set Default mode in persistent memory:
 {
